--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0-beta.2",
+    "react-icons": "^3.9.0",
     "react-typography": "^0.16.19",
     "typography": "^0.16.19"
   },
