--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "arthaus-website",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "Arthaus website gatsby project.",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "John Spurgin <johnspurgin@gmail.com>",
   "dependencies": {
     "gatsby": "^2.20.8",
     "gatsby-image": "^2.3.1",
